Add gap option for label icons

--- a/resources/scss/tool.scss
+++ b/resources/scss/tool.scss
@@ -12,7 +12,36 @@
         fill: currentColor;
     }
 }
-
-.gap-1 {
-    gap: 0.25rem;
+.gap-x-0\.5 {
+    column-gap: 0.125rem;
+}
+.gap-x-1 {
+    column-gap: 0.25rem;
+}
+.gap-x-1\.5 {
+    column-gap: 0.375rem;
+}
+.gap-x-2 {
+    column-gap: 0.5rem;
+}
+.gap-x-2\.5 {
+    column-gap: 0.625rem;
+}
+.gap-x-3 {
+    column-gap: 0.75rem;
+}
+.gap-x-3\.5 {
+    column-gap: 0.875rem;
+}
+.gap-x-4 {
+    column-gap: 1rem;
+}
+.gap-x-5 {
+    column-gap: 1.25rem;
+}
+.gap-x-6 {
+    column-gap: 1.5rem;
+}
+.gap-x-8 {
+    column-gap: 2rem;
 }
