--- a/resources/scss/tool.scss
+++ b/resources/scss/tool.scss
@@ -45,3 +45,11 @@
 .gap-x-8 {
     column-gap: 2rem;
 }
+
+.sidebar-item-card {
+    margin-left: 2.5rem;
+}
+
+.rounded-md {
+    border-radius: 0.375rem;
+}
